--- a/src/SaeedRezayi.DataLayer/SaeedRezayi.DataLayer.csproj
+++ b/src/SaeedRezayi.DataLayer/SaeedRezayi.DataLayer.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="Migrations\20201013142655_InitBlogSystem001.cs" />
+    <!--<Compile Remove="Migrations\20201013142655_InitBlogSystem001.cs" />
     <Compile Remove="Migrations\20201013142655_InitBlogSystem001.Designer.cs" />
     <Compile Remove="Migrations\20201013144424_InitBlogSystem001.cs" />
     <Compile Remove="Migrations\20201013144424_InitBlogSystem001.Designer.cs" />
@@ -19,6 +19,18 @@
     <Compile Remove="Migrations\20201107163333_AddCultureTable_AddPostLocalesTable_AddUserCultureAndBioAndFriendship.Designer.cs" />
     <Compile Remove="Migrations\20201107163907_InitBlogSystem_AddCulture_PostLocales_InitUsersSystem.cs" />
     <Compile Remove="Migrations\20201107163907_InitBlogSystem_AddCulture_PostLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201107171818_InitBlogSystem_AddCulture_PostLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201107171818_InitBlogSystem_AddCulture_PostLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201108193043_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201108193043_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201108193913_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201108193913_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201108194335_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201108194335_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201108195112_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201108195112_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.Designer.cs" />
+    <Compile Remove="Migrations\20201109135214_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.cs" />
+    <Compile Remove="Migrations\20201109135214_InitBlogSystem_AddCulture_AddLocales_InitUsersSystem.Designer.cs" />-->
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
@@ -45,5 +57,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
