Enable swagger api and client generation after each build

--- a/src/Gateway/Presentation/Web/Gateway.Web.Api.csproj
+++ b/src/Gateway/Presentation/Web/Gateway.Web.Api.csproj
@@ -64,11 +64,11 @@
   </ItemGroup>
 
 
-  <!--<Target Name="NSwag" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'">
+  <Target Name="NSwag" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'">
     <Copy SourceFiles="@(Reference)" DestinationFolder="$(OutDir)References" />
     <Exec Command="$(NSwagExe_Core31) run /variables:Configuration=$(Configuration)" />
     <RemoveDir Directories="$(OutDir)References" />
-  </Target>-->
+  </Target>
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
