--- a/src/MicroServices/Logger/Core/LogModule.Infrastructure/LogModule.Infrastructure.csproj
+++ b/src/MicroServices/Logger/Core/LogModule.Infrastructure/LogModule.Infrastructure.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.2.0" />
   </ItemGroup>
 
   <ItemGroup>
