add blog appsettings and modules configuration like logging, health check settings

--- a/src/MicroServices/Blog/Presentation/Blog.Web.Api/appsettings.json
+++ b/src/MicroServices/Blog/Presentation/Blog.Web.Api/appsettings.json
@@ -1,11 +1,4 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft": "Information",
-  //    "Microsoft.Hosting.Lifetime": "Information"
-  //  }
-  //},
   "AllowedHosts": "*",
   "HealthCheck": {
     "Enabled": true,
@@ -31,7 +24,10 @@
   },
   "Auth": {
     "Authority": "https://localhost:5007",
-    "Audiences": [ "httpslocalhost5007", "httpslocalhost5004" ]
+    "Audiences": [
+      "httpslocalhost5007",
+      "httpslocalhost5004"
+    ]
   },
   "CorsOrigins": [
     "https://localhost:5004",
@@ -43,13 +39,6 @@
       "Serilog.Sinks.Async",
       "Serilog.Sinks.Console"
     ],
-    //"MinimumLevel": {
-    //  "Default": "Information",
-    //  "Override": {
-    //    "Microsoft": "Warning",
-    //    "System": "Warning"
-    //  }
-    //},
     "WriteTo": [
       {
         "Name": "Async",
@@ -64,7 +53,7 @@
       {
         "Name": "Http",
         "Args": {
-          "requestUri": "http://localhost:4949/api/v1/Logger"
+          "requestUri": "http://localhost:5003/api/v1/Logger"
         }
       }
     ],
@@ -73,7 +62,6 @@
       "WithMachineName",
       "WithThreadId",
       "WithProcessId"
-      //,"WithUtcTimestamp"
     ],
     "Properties": {
       "Application": "Blog.Api",
