--- a/src/MicroServices/Blog/Presentation/Blog.Web.Api/Blog.Api.csproj
+++ b/src/MicroServices/Blog/Presentation/Blog.Web.Api/Blog.Api.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.11" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="3.1.11" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.11" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.4" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.2.0" />
     <PackageReference Include="NSwag.Core" Version="13.2.0" />
     <PackageReference Include="NSwag.MSBuild" Version="13.2.0">
