--- a/src/Gateway/Presentation/Web/web.config
+++ b/src/Gateway/Presentation/Web/web.config
@@ -17,7 +17,7 @@
       </aspNetCore>
       <security>
         <requestFiltering>
-          <requestLimits maxQueryString="32768" />
+          <requestLimits maxAllowedContentLength="209715200" maxQueryString="32768" />
         </requestFiltering>
       </security>
     </system.webServer>
