config microservices health checks for ui, set gateway logging provider to logger services

--- a/src/Gateway/Presentation/Web/appsettings.json
+++ b/src/Gateway/Presentation/Web/appsettings.json
@@ -1,5 +1,13 @@
 ﻿{
   "HealthChecks-UI": {
+    // "Webhooks": [
+    //   {
+    //     "Name": "",
+    //     "Uri": "",
+    //     "Payload": "",
+    //     "RestoredPayload": ""
+    //   }
+    // ],
     "HealthChecks": [
       {
         "Name": "Blog Microservice Check",
@@ -12,12 +20,21 @@
       {
         "Name": "Logger Microservice Check",
         "Uri": "http://localhost:4949/hc"
+      },
+      {
+        "Name": "Api Gateway Microservice Check",
+        "Uri": "https://localhost:5005/hc"
+      },
+      {
+        "Name": "Storage Microservice Check",
+        "Uri": "http://localhost:5003/hc"
       }
     ],
     "MaximumHistoryEntriesPerEndpoint": 50,
-    //"ApiMaxActiveRequests": 1,
-    "EvaluationTimeInSeconds": 60,
-    "MinimumSecondsBetweenFailureNotifications": 60
+    "ApiMaxActiveRequests": 3,
+    "EvaluationTimeInSeconds": 30,
+    "MinimumSecondsBetweenFailureNotifications": 60,
+    "MicroservicesUptimeMonitor": true
   },
   "Data": {
     "useInMemory": "false",
@@ -31,13 +48,6 @@
       "Serilog.Sinks.Async",
       "Serilog.Sinks.Console"
     ],
-    //"MinimumLevel": {
-    //  "Default": "Information",
-    //  "Override": {
-    //    "Microsoft": "Warning",
-    //    "System": "Warning"
-    //  }
-    //},
     "WriteTo": [
       {
         "Name": "Async",
@@ -52,7 +62,7 @@
       {
         "Name": "Http",
         "Args": {
-          "requestUri": "http://localhost:4949/api/v1/Logger"
+          "requestUri": "http://localhost:5003/api/v1/Logger"
         }
       }
     ],
@@ -61,7 +71,6 @@
       "WithMachineName",
       "WithThreadId",
       "WithProcessId"
-      //,"WithUtcTimestamp"
     ],
     "Properties": {
       "Application": "Gateway.Web.Api",
@@ -69,14 +78,17 @@
     }
   },
   "LogServer": {
-    "Address": "http://localhost:4949/api/v1/Logger",
+    "Address": "http://localhost:5005/api/v1/Logger",
     "Username": "logger",
     "Password": "logger",
     "ApiKey": "Gateway.Api"
   },
   "Auth": {
     "Authority": "https://localhost:5007",
-    "Audiences": [ "httpslocalhost5007", "httpslocalhost5005" ]
+    "Audiences": [
+      "httpslocalhost5007",
+      "httpslocalhost5005"
+    ]
   },
   "CorsOrigins": []
 }
